--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,7 @@
     width: 100%;
     height: 50%;
     background-color: rgb(238, 237, 237);
+    border-bottom: 2px solid #fff;
 }
 .card-text .item-price{
     font-size: 18px;
