--- a/css/style.css
+++ b/css/style.css
@@ -153,13 +153,12 @@ footer{
     background-color: #212529;
     margin-top: 50px;
 }
-.s-map iframe{
+.s-map{
     width: 100%;
-    margin-top: 50px;
 }
 .copy-text{
     display: flex;
-    color: rgb(236, 234, 234);
+    color: rgb(123, 123, 123);
     align-items: center;
     justify-content: center;
     padding: 18px 0;
@@ -201,4 +200,8 @@ footer{
     font-size: 20px;
     font-weight: 600;
     
+}
+.m-img{
+    margin-left: 30px;
+    margin-bottom: 10px;
 }
